--- a/PA165_pneuservis/pom.xml
+++ b/PA165_pneuservis/pom.xml
@@ -65,7 +65,22 @@
 			<artifactId>commons-logging</artifactId>
                         <version>RELEASE</version>
 		</dependency>
+                
+                
+                
+                
+                
+                <dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.10.2.0</version>
+		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.12</version>
+		</dependency>
 	</dependencies>
     
 </project>
