--- a/PA165_pneuservis/pom.xml
+++ b/PA165_pneuservis/pom.xml
@@ -94,6 +94,13 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.8</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
 </project>
