Added versions to all dependencies + increased dependency versions

--- a/PA165_pneuservis/pom.xml
+++ b/PA165_pneuservis/pom.xml
@@ -11,9 +11,8 @@
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
  
-    
     <dependencies>
-              <dependency>
+                <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
                         <version>4.2.2.RELEASE</version>
@@ -24,16 +23,9 @@
                         <version>4.2.2.RELEASE</version>
 		</dependency>
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>2.0.2-beta</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-                        <version>RELEASE</version>
+                        <version>1.9.1.RELEASE</version>
 		</dependency>
                 <dependency>
 			<groupId>org.springframework</groupId>
@@ -53,7 +45,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-                        <version>RELEASE</version>
+                        <version>5.2.2.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.el</groupId>
@@ -63,50 +55,50 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-                        <version>RELEASE</version>
-		</dependency>
-                
-                
-                
-                
-                
+                        <version>1.2</version>
+		</dependency>       
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>2.0.2-beta</version>
+			<scope>test</scope>
+		</dependency>                
                 <dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
-			<version>10.10.2.0</version>
+			<version>10.11.1.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.12</version>
+			<version>1.7.13</version>
 		</dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.openejb</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>6.0-4</version>
-            <scope>test</scope>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.8.8</version>
-            <scope>test</scope>
-            <type>jar</type>
-        </dependency>
+                <dependency>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                        <version>4.12</version>
+                        <scope>test</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.openejb</groupId>
+                        <artifactId>javaee-api</artifactId>
+                        <version>6.0-6</version>
+                        <scope>test</scope>
+                        <type>jar</type>
+                </dependency>
+                <dependency>
+                        <groupId>org.testng</groupId>
+                        <artifactId>testng</artifactId>
+                        <version>6.9.9</version>
+                        <scope>test</scope>
+                        <type>jar</type>
+                </dependency>
     </dependencies>
 
-	<modules>
+    <modules>
         <module>api_layer</module>
         <module>dao_layer</module>
         <module>service_facade_layer</module>
-	</modules>
+    </modules>
     
 </project>
