--- a/PA165_pneuservis/api_layer/pom.xml
+++ b/PA165_pneuservis/api_layer/pom.xml
@@ -11,5 +11,11 @@
     <artifactId>api_layer</artifactId>
     <packaging>jar</packaging>
     <name>API Layer</name>
-    
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>dao_layer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
