--- a/PA165_pneuservis/pom.xml
+++ b/PA165_pneuservis/pom.xml
@@ -93,6 +93,11 @@
                         <scope>test</scope>
                         <type>jar</type>
                 </dependency>
+                <dependency>
+                        <groupId>net.sf.dozer</groupId>
+                        <artifactId>dozer</artifactId>
+                        <version>5.3.2</version>
+                </dependency>
     </dependencies>
 
     <modules>
