--- a/PA165_pneuservis/service_facade_layer/pom.xml
+++ b/PA165_pneuservis/service_facade_layer/pom.xml
@@ -13,11 +13,6 @@
     <name>Service Facade Layer</name>
     <dependencies>
         <dependency>
-            <groupId>net.sf.dozer</groupId>
-            <artifactId>dozer</artifactId>
-            <version>5.3.2</version>
-        </dependency>
-        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>dao_layer</artifactId>
             <version>${project.version}</version>
@@ -26,6 +21,12 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>api_layer</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.3.2</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
