--- a/PA165_pneuservis/service_facade_layer/pom.xml
+++ b/PA165_pneuservis/service_facade_layer/pom.xml
@@ -23,5 +23,11 @@
             <artifactId>api_layer</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
