--- a/PA165_pneuservis/pom.xml
+++ b/PA165_pneuservis/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.muni.fi</groupId>
     <artifactId>PA165_pneuservis</artifactId>
-    <version>1.0</version>
+    <version>2.0</version>
     <packaging>pom</packaging>
     
     <properties>
@@ -43,6 +43,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>4.2.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>4.2.2.RELEASE</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
