Added new maven modules: WebUI and REST

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 PA165_pneuservis/api_layer/target/*
 PA165_pneuservis/dao_layer/target/*
 PA165_pneuservis/service_facade_layer/target/*
+PA165_pneuservis/WebUI/target/*
+PA165_pneuservis/REST/target/*
