Moved random data generation to new module

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ PA165_pneuservis/dao_layer/target/*
 PA165_pneuservis/service_facade_layer/target/*
 PA165_pneuservis/WebUI/target/*
 PA165_pneuservis/REST/target/*
+/PA165_pneuservis/Data/target/
