Added TireController and List View

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ PA165_pneuservis/service_facade_layer/target/*
 PA165_pneuservis/WebUI/target/*
 PA165_pneuservis/REST/target/*
 PA165_pneuservis/Data/target/*
+PA165_pneuservis/WebUI/nb-configuration.xml
+PA165_pneuservis/REST/nb-configuration.xml
