--- a/PA165_pneuservis/WebUI/pom.xml
+++ b/PA165_pneuservis/WebUI/pom.xml
@@ -53,5 +53,33 @@
             <version>3.0</version>
             <type>jar</type>
         </dependency>
+
     </dependencies>
+    
+     <build>
+        <!-- only mvn run -->
+        <defaultGoal>tomcat7:run</defaultGoal>
+        <plugins>
+            <!-- allows no web.xml deployment descriptor -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+            <!--  embb. tomcat -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/pa165</path>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    
 </project>
