--- a/PA165_pneuservis/WebUI/pom.xml
+++ b/PA165_pneuservis/WebUI/pom.xml
@@ -16,6 +16,12 @@
     <url>http://maven.apache.org</url>
 
     <dependencies>
+         <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>6.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.taglibs</groupId>
             <artifactId>taglibs-standard-spec</artifactId>
@@ -53,7 +59,6 @@
             <version>3.0</version>
             <type>jar</type>
         </dependency>
-
     </dependencies>
     
      <build>
