--- a/PA165_pneuservis/WebUI/src/main/webapp/WEB-INF/web.xml
+++ b/PA165_pneuservis/WebUI/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	 version="3.0">
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <security-role>
+        <role-name>administrator</role-name>
+    </security-role>
+    <security-role>
+        <role-name>user</role-name>
+    </security-role>
+
+    <filter>
+        <filter-name>AdminAccessFilter</filter-name>
+        <filter-class>cz.muni.fi.pa165_pneuservis.mvc.servlets.AdminAccessFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AdminAccessFilter</filter-name>
+        <url-pattern>/tire/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>AdminAccessFilter</filter-name>
+        <url-pattern>/customer/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>AdminAccessFilter</filter-name>
+        <url-pattern>/service/*</url-pattern>
+    </filter-mapping>
+
+
+    <filter>
+        <filter-name>BothAccessFilter</filter-name>
+        <filter-class>cz.muni.fi.pa165_pneuservis.mvc.servlets.BothAccessFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>BothAccessFilter</filter-name>
+        <url-pattern>/order/*</url-pattern>
+    </filter-mapping>
+
+
+
+    <login-config>
+        <auth-method>BASIC</auth-method>
+    </login-config>
+
+
 </web-app>
