--- a/PA165_pneuservis/Data/pom.xml
+++ b/PA165_pneuservis/Data/pom.xml
@@ -17,5 +17,11 @@
             <version>3.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>3.2.4.RELEASE</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
