--- a/PA165_pneuservis/WebUI/pom.xml
+++ b/PA165_pneuservis/WebUI/pom.xml
@@ -17,6 +17,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>3.2.4.RELEASE</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
@@ -81,7 +87,6 @@
                 <version>2.2</version>
                 <configuration>
                     <path>/pa165</path>
-                    <tomcatUsers>tomcat-users.xml</tomcatUsers>
                 </configuration>
             </plugin>
         </plugins>
