--- a/PA165_pneuservis/Data/pom.xml
+++ b/PA165_pneuservis/Data/pom.xml
@@ -23,5 +23,10 @@
             <version>3.2.4.RELEASE</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.7</version>
+        </dependency>
     </dependencies>
 </project>
